Fix header display on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1084,4 +1084,24 @@
     bottom: 5% !important;
     margin-left: 20% !important;
   }
+
+  .banner {
+    margin-top: 60px !important;
+  }
+
+  .header {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    transition: 0.5s;
+    z-index: 1000;
+    background-color: #1e1f24;
+    transition: background-color 0.3s ease-in-out;
+  }
+
+  .carouselButton {
+    visibility: hidden;
+  }
 }
